--- a/Lightning2/Lightning2.csproj
+++ b/Lightning2/Lightning2.csproj
@@ -41,6 +41,7 @@
     <None Remove="Content\NativeLibraries\SDL2_image-v2.0.5-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_mixer-v2.0.4-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.15-x64.dll" />
+    <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll" />
     <None Remove="Content\NativeLibraries\zlib1.dll" />
   </ItemGroup>
 
@@ -109,7 +110,7 @@
     <Content Include="Content\NativeLibraries\SDL2_mixer-v2.0.4-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\SDL2_ttf-v2.0.15-x64.dll">
+    <Content Include="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\NativeLibraries\zlib1.dll">
@@ -157,10 +158,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Lightning2_Build.tt</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Text\" />
   </ItemGroup>
 
 </Project>
