begin working on a new animated/texture atlas api

--- a/Lightning2.Launcher/Lightning2.Launcher.csproj
+++ b/Lightning2.Launcher/Lightning2.Launcher.csproj
@@ -9,6 +9,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Content\AnimTextureTest\AnimTextureTestF0.png" />
+    <None Remove="Content\AnimTextureTest\AnimTextureTestF1.png" />
+    <None Remove="Content\AnimTextureTest\AnimTextureTestF2.png" />
+    <None Remove="Content\AnimTextureTest\AnimTextureTestF3.png" />
+    <None Remove="Content\AtlasTextureTest.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Content\AnimTextureTest\AnimTextureTestF0.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\AnimTextureTest\AnimTextureTestF1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\AnimTextureTest\AnimTextureTestF2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\AnimTextureTest\AnimTextureTestF3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\AtlasTextureTest.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Lightning2\Lightning2.csproj" />
   </ItemGroup>
 
