--- a/Lightning2/Lightning2.csproj
+++ b/Lightning2/Lightning2.csproj
@@ -29,7 +29,6 @@
     <None Remove="Content\NativeLibraries\libmodplug-1.dll" />
     <None Remove="Content\NativeLibraries\libmpg123-0.dll" />
     <None Remove="Content\NativeLibraries\libogg-0.dll" />
-    <None Remove="Content\NativeLibraries\libpng16-16.dll" />
     <None Remove="Content\NativeLibraries\libtiff-5.dll" />
     <None Remove="Content\NativeLibraries\libvorbis-0.dll" />
     <None Remove="Content\NativeLibraries\libvorbisfile-3.dll" />
@@ -77,7 +76,7 @@
     <Content Include="Content\NativeLibraries\libopusfile-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libpng16-16.dll">
+    <Content Include="libpng16-16.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\NativeLibraries\libtiff-5.dll">
@@ -111,7 +110,7 @@
     <Content Include="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\zlib1.dll">
+    <Content Include="zlib1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
