--- a/Lightning2.Launcher/Lightning2.Launcher.csproj
+++ b/Lightning2.Launcher/Lightning2.Launcher.csproj
@@ -14,6 +14,10 @@
     <None Remove="Content\AnimTextureTest\AnimTextureTestF2.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF3.png" />
     <None Remove="Content\AtlasTextureTest.png" />
+    <None Remove="Content\xm_boot.mp3" />
+    <None Remove="Content\xm_boot_ogg.ogg" />
+    <None Remove="Content\xm_title.mp3" />
+    <None Remove="Content\xm_title_ogg.ogg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +34,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\AtlasTextureTest.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\xm_boot.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\xm_boot_ogg.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\xm_title.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\xm_title_ogg.ogg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
