--- a/Lightning2/Lightning2.csproj
+++ b/Lightning2/Lightning2.csproj
@@ -36,7 +36,6 @@
     <None Remove="Content\NativeLibraries\SDL2-v2.0.20-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_gfx-v1.0.5-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_image-v2.0.5-x64.dll" />
-    <None Remove="Content\NativeLibraries\SDL2_mixer-v2.0.4-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.15-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll" />
     <None Remove="Content\NativeLibraries\zlib1.dll" />
@@ -52,7 +51,7 @@
     <Content Include="Content\Localisation\pseudo.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libFLAC-8.dll">
+    <Content Include="libFLAC-8.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\NativeLibraries\libfreetype-6.dll">
@@ -61,19 +60,19 @@
     <Content Include="Content\NativeLibraries\libjpeg-9.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libmodplug-1.dll">
+    <Content Include="libmodplug-1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libmpg123-0.dll">
+    <Content Include="libmpg123-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libogg-0.dll">
+    <Content Include="libogg-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libopus-0.dll">
+    <Content Include="libopus-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libopusfile-0.dll">
+    <Content Include="libopusfile-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libpng16-16.dll">
@@ -82,10 +81,10 @@
     <Content Include="Content\NativeLibraries\libtiff-5.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libvorbis-0.dll">
+    <Content Include="libvorbis-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libvorbisfile-3.dll">
+    <Content Include="libvorbisfile-3.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\NativeLibraries\libwebp-7.dll">
