--- a/Lightning2/Lightning2.csproj
+++ b/Lightning2/Lightning2.csproj
@@ -35,6 +35,7 @@
     <None Remove="Content\NativeLibraries\libwebp-7.dll" />
     <None Remove="Content\NativeLibraries\SDL2-v2.0.20-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_gfx-v1.0.5-x64.dll" />
+    <None Remove="Content\NativeLibraries\SDL2_gfx-v1.0.6-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_image-v2.0.5-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.15-x64.dll" />
     <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll" />
@@ -49,6 +50,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Localisation\pseudo.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\NativeLibraries\SDL2_gfx-v1.0.6-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libFLAC-8.dll">
@@ -95,9 +99,6 @@
 	  <Link>Content\NativeLibraries\SDL2.dll</Link>
     </Content>
     <Content Include="Content\NativeLibraries\SDL2-v2.0.20-x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\NativeLibraries\SDL2_gfx-v1.0.5-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\NativeLibraries\SDL2_image-v2.0.5-x64.dll">
