first pass of particle manager, not working yet. prevent apps from modifying texture handles by changing the setter of Texture.TextureHandle to private and renaming it to handle

--- a/Lightning2.Launcher/Lightning2.Test.csproj
+++ b/Lightning2.Launcher/Lightning2.Test.csproj
@@ -14,6 +14,7 @@
     <None Remove="Content\AnimTextureTest\AnimTextureTestF2.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF3.png" />
     <None Remove="Content\AtlasTextureTest.png" />
+    <None Remove="Content\Sparkles.png" />
     <None Remove="Content\xm_boot.mp3" />
     <None Remove="Content\xm_boot_ogg.ogg" />
     <None Remove="Content\xm_title.mp3" />
@@ -34,6 +35,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\AtlasTextureTest.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sparkles.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\xm_boot.mp3">
