add additional overload for unloadfont so you can unload font with friendly name

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -3,7 +3,7 @@
 [Engine]
 TargetFPS = 60
 ShowFPS = true
-PerformanceProfiler = true
+PerformanceProfiler = false
 
 [Localisation]
 Language = "en-GB-test"
