--- a/Lightning2.Launcher/Lightning2.Test.csproj
+++ b/Lightning2.Launcher/Lightning2.Test.csproj
@@ -5,9 +5,29 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PlatformTarget>x64</PlatformTarget>
+    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
   </PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<PlatformTarget>x64</PlatformTarget>
+		<DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
+		<PlatformTarget>ARM64</PlatformTarget>
+		<DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<PlatformTarget>x64</PlatformTarget>
+		<DefineConstants>TRACE;WINDOWS</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
+		<PlatformTarget>ARM64</PlatformTarget>
+		<DefineConstants>TRACE;WINDOWS</DefineConstants>
+	</PropertyGroup>
+	
   <ItemGroup>
     <None Remove="Content\AnimTextureTest\AnimTextureTestF0.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF1.png" />
