--- a/NuCore.SDL2-CS/NuCore.SDL2.csproj
+++ b/NuCore.SDL2-CS/NuCore.SDL2.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>NuCore.SDL2</RootNamespace>
-    <Configurations>Debug;Release</Configurations>
+    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
     <AssemblyVersion>3.0.6.0</AssemblyVersion>
     <FileVersion>3.0.6.0</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -11,11 +11,14 @@
     <Description>NuCore SDL2 Bindings</Description>
     <Authors>Ethan, starfrost</Authors>
     <Version>3.0.6</Version>
-    <PlatformTarget>x64</PlatformTarget>
-
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;WINDOWS,X64</DefineConstants>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;WINDOWS,X64</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
@@ -25,4 +28,8 @@
     <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release.Arm64|AnyCPU'">
+	<PlatformTarget>ARM64</PlatformTarget>
+	<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+  </PropertyGroup>
 </Project>
