--- a/NuCore.Utilities/NuCore.Utilities.csproj
+++ b/NuCore.Utilities/NuCore.Utilities.csproj
@@ -1,12 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Description>Shared utility DLL</Description>
+    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
+    <PlatformTarget>ARM64</PlatformTarget>
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
   </PropertyGroup>
 
@@ -15,6 +21,11 @@
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
+    <PlatformTarget>ARM64</PlatformTarget>
+	<DefineConstants>TRACE;WINDOWS</DefineConstants>
+  </PropertyGroup>
+	
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
