--- a/NuCore.SDL2-CS/NuCore.SDL2.csproj
+++ b/NuCore.SDL2-CS/NuCore.SDL2.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;WINDOWS,X64</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINDOWS,ARM64</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
@@ -30,6 +30,6 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release.Arm64|AnyCPU'">
 	<PlatformTarget>ARM64</PlatformTarget>
-	<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	<DefineConstants>TRACE;WINDOWS,ARM64</DefineConstants>
   </PropertyGroup>
 </Project>
