--- a/NuCore.Utilities/NuCore.Utilities.csproj
+++ b/NuCore.Utilities/NuCore.Utilities.csproj
@@ -9,21 +9,29 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
     <DefineConstants>DEBUG;TRACE;WINDOWS,X64</DefineConstants>
+	<AssemblyVersion>1.0.0.0</AssemblyVersion>
+	<FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
     <PlatformTarget>ARM64</PlatformTarget>
     <DefineConstants>DEBUG;TRACE;WINDOWS,ARM64</DefineConstants>
+	<AssemblyVersion>1.0.1.0</AssemblyVersion>
+	<FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
     <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	<AssemblyVersion>1.0.0.0</AssemblyVersion>
+	<FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release.Arm64|AnyCPU'">
     <PlatformTarget>ARM64</PlatformTarget>
 	<DefineConstants>TRACE;WINDOWS,ARM64</DefineConstants>
+	<AssemblyVersion>1.0.1.0</AssemblyVersion>
+	<FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 	
   <ItemGroup>
