--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -75,7 +75,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lightning2\Lightning2.csproj" />
+    <ProjectReference Include="..\Lightning2\LightningGL.csproj" />
   </ItemGroup>
 
 </Project>
