fix button rendering and implement renderable abstratc base class for all rendered classes to reduce code reuse

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -9,6 +9,7 @@
 	<Configurations>Debug;Release</Configurations>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<PlatformTarget>x64</PlatformTarget>
+	<Product>$(AssemblyName)</Product>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
 
@@ -150,7 +151,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Package\" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
