directory changes, begin working on packager. also get rid of layers and add a texture manager, dramatically simplify texture atlas api

--- a/LightningPackager/LightningPackager.csproj
+++ b/LightningPackager/LightningPackager.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="ManagedLzma">
+      <HintPath>..\Lightning2\Content\Libraries\ManagedLzma.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
