--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -33,7 +33,7 @@
     <None Remove="Content\AnimTextureTest\AnimTextureTestF1.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF2.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF3.png" />
-    <None Remove="Content\AtlasTextureTest.png" />
+    <None Remove="Content\TextureAtlasTest.png" />
     <None Remove="Content\Sparkles.png" />
     <None Remove="Content\xm_boot.mp3" />
     <None Remove="Content\xm_boot_ogg.ogg" />
@@ -52,9 +52,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\AnimTextureTest\AnimTextureTestF3.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\AtlasTextureTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Sparkles.png">
