--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -11,10 +11,11 @@
 	<PlatformTarget>x64</PlatformTarget>
 	<Product>$(AssemblyName)</Product>
   </PropertyGroup>
+	
+<!-- Import text templating -->
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
 
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<DefineConstants>DEBUG;TRACE;WINDOWS,X64</DefineConstants>
 	</PropertyGroup>
 	
@@ -24,29 +25,33 @@
 
   <ItemGroup>
     <None Remove="Content\Engine.ini" />
+    <None Remove="Content\Libraries\ManagedLzma.dll" />
     <None Remove="Content\Localisation\en-GB-test.ini" />
     <None Remove="Content\Localisation\pseudo.ini" />
-    <None Remove="Content\NativeLibraries\libFLAC-8.dll" />
-    <None Remove="Content\NativeLibraries\libfreetype-6.dll" />
-    <None Remove="Content\NativeLibraries\libjpeg-9.dll" />
-    <None Remove="Content\NativeLibraries\libmodplug-1.dll" />
-    <None Remove="Content\NativeLibraries\libmpg123-0.dll" />
-    <None Remove="Content\NativeLibraries\libogg-0.dll" />
-    <None Remove="Content\NativeLibraries\libtiff-5.dll" />
-    <None Remove="Content\NativeLibraries\libvorbis-0.dll" />
-    <None Remove="Content\NativeLibraries\libvorbisfile-3.dll" />
-    <None Remove="Content\NativeLibraries\libwebp-7.dll" />
-    <None Remove="Content\NativeLibraries\SDL2-v2.0.20-x64.dll" />
-    <None Remove="Content\NativeLibraries\SDL2_gfx-v1.0.5-x64.dll" />
-    <None Remove="Content\NativeLibraries\SDL2_gfx-v1.0.6-x64.dll" />
-    <None Remove="Content\NativeLibraries\SDL2_image-v2.0.5-x64.dll" />
-    <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.15-x64.dll" />
-    <None Remove="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll" />
-    <None Remove="Content\NativeLibraries\zlib1.dll" />
+    <None Remove="Content\Libraries\libFLAC-8.dll" />
+    <None Remove="Content\Libraries\libfreetype-6.dll" />
+    <None Remove="Content\Libraries\libjpeg-9.dll" />
+    <None Remove="Content\Libraries\libmodplug-1.dll" />
+    <None Remove="Content\Libraries\libmpg123-0.dll" />
+    <None Remove="Content\Libraries\libogg-0.dll" />
+    <None Remove="Content\Libraries\libtiff-5.dll" />
+    <None Remove="Content\Libraries\libvorbis-0.dll" />
+    <None Remove="Content\Libraries\libvorbisfile-3.dll" />
+    <None Remove="Content\Libraries\libwebp-7.dll" />
+    <None Remove="Content\Libraries\SDL2-v2.0.20-x64.dll" />
+    <None Remove="Content\Libraries\SDL2_gfx-v1.0.5-x64.dll" />
+    <None Remove="Content\Libraries\SDL2_gfx-v1.0.6-x64.dll" />
+    <None Remove="Content\Libraries\SDL2_image-v2.0.5-x64.dll" />
+    <None Remove="Content\Libraries\SDL2_ttf-v2.0.15-x64.dll" />
+    <None Remove="Content\Libraries\SDL2_ttf-v2.0.18-x64.dll" />
+    <None Remove="Content\Libraries\zlib1.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Content\Engine.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Libraries\ManagedLzma.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Localisation\en-GB-test.ini">
@@ -55,16 +60,16 @@
     <Content Include="Content\Localisation\pseudo.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\SDL2_gfx-v1.0.6-x64.dll">
+    <Content Include="Content\Libraries\SDL2_gfx-v1.0.6-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libFLAC-8.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libfreetype-6.dll">
+    <Content Include="Content\Libraries\libfreetype-6.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libjpeg-9.dll">
+    <Content Include="Content\Libraries\libjpeg-9.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libmodplug-1.dll">
@@ -85,7 +90,7 @@
     <Content Include="libpng16-16.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libtiff-5.dll">
+    <Content Include="Content\Libraries\libtiff-5.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libvorbis-0.dll">
@@ -94,23 +99,23 @@
     <Content Include="libvorbisfile-3.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\libwebp-7.dll">
+    <Content Include="Content\Libraries\libwebp-7.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\SDL2-v2.0.22-x64.dll">
+    <Content Include="Content\Libraries\SDL2-v2.0.22-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  <Link>Content\NativeLibraries\SDL2.dll</Link>
+	  <Link>Content\Libraries\SDL2.dll</Link>
     </Content>
-    <Content Include="Content\NativeLibraries\SDL2-v2.0.22-x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Content\NativeLibraries\SDL2_image-v2.0.5-x64.dll">
+    <Content Include="Content\Libraries\SDL2-v2.0.22-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\SDL2_mixer-v2.0.4-x64.dll">
+    <Content Include="Content\Libraries\SDL2_image-v2.0.5-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\NativeLibraries\SDL2_ttf-v2.0.18-x64.dll">
+    <Content Include="Content\Libraries\SDL2_mixer-v2.0.4-x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Libraries\SDL2_ttf-v2.0.18-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="zlib1.dll">
