engine graphics settings work

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -5,5 +5,10 @@ TargetFPS = 60
 ShowFPS = true
 PerformanceProfiler = false
 
+[Graphics]
+ResolutionX = 960
+ResolutionY = 640
+WindowFlags = "SDL_WINDOW_SHOWN"
+
 [Localisation]
 Language = "en-GB-test"
