package file writing (not reading yet)

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -132,6 +132,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LightningPackager\LightningPackager.csproj" />
     <ProjectReference Include="..\NuCore.SDL2-CS\NuCore.SDL2.csproj" />
     <ProjectReference Include="..\NuCore.Utilities\NuCore.Utilities.csproj" />
   </ItemGroup>
