--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -25,33 +25,33 @@
 
   <ItemGroup>
     <None Remove="Content\Engine.ini" />
-    <None Remove="Content\Libraries\ManagedLzma.dll" />
+    <None Remove="Libraries\ManagedLzma.dll" />
     <None Remove="Content\Localisation\en-GB-test.ini" />
     <None Remove="Content\Localisation\pseudo.ini" />
-    <None Remove="Content\Libraries\libFLAC-8.dll" />
-    <None Remove="Content\Libraries\libfreetype-6.dll" />
-    <None Remove="Content\Libraries\libjpeg-9.dll" />
-    <None Remove="Content\Libraries\libmodplug-1.dll" />
-    <None Remove="Content\Libraries\libmpg123-0.dll" />
-    <None Remove="Content\Libraries\libogg-0.dll" />
-    <None Remove="Content\Libraries\libtiff-5.dll" />
-    <None Remove="Content\Libraries\libvorbis-0.dll" />
-    <None Remove="Content\Libraries\libvorbisfile-3.dll" />
-    <None Remove="Content\Libraries\libwebp-7.dll" />
-    <None Remove="Content\Libraries\SDL2-v2.0.20-x64.dll" />
-    <None Remove="Content\Libraries\SDL2_gfx-v1.0.5-x64.dll" />
-    <None Remove="Content\Libraries\SDL2_gfx-v1.0.6-x64.dll" />
-    <None Remove="Content\Libraries\SDL2_image-v2.0.5-x64.dll" />
-    <None Remove="Content\Libraries\SDL2_ttf-v2.0.15-x64.dll" />
-    <None Remove="Content\Libraries\SDL2_ttf-v2.0.18-x64.dll" />
-    <None Remove="Content\Libraries\zlib1.dll" />
+    <None Remove="Libraries\libFLAC-8.dll" />
+    <None Remove="Libraries\libfreetype-6.dll" />
+    <None Remove="Libraries\libjpeg-9.dll" />
+    <None Remove="Libraries\libmodplug-1.dll" />
+    <None Remove="Libraries\libmpg123-0.dll" />
+    <None Remove="Libraries\libogg-0.dll" />
+    <None Remove="Libraries\libtiff-5.dll" />
+    <None Remove="Libraries\libvorbis-0.dll" />
+    <None Remove="Libraries\libvorbisfile-3.dll" />
+    <None Remove="Libraries\libwebp-7.dll" />
+    <None Remove="Libraries\SDL2-v2.0.20-x64.dll" />
+    <None Remove="Libraries\SDL2_gfx-v1.0.5-x64.dll" />
+    <None Remove="Libraries\SDL2_gfx-v1.0.6-x64.dll" />
+    <None Remove="Libraries\SDL2_image-v2.0.5-x64.dll" />
+    <None Remove="Libraries\SDL2_ttf-v2.0.15-x64.dll" />
+    <None Remove="Libraries\SDL2_ttf-v2.0.18-x64.dll" />
+    <None Remove="Libraries\zlib1.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Content\Engine.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\ManagedLzma.dll">
+    <Content Include="Libraries\ManagedLzma.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Localisation\en-GB-test.ini">
@@ -60,16 +60,16 @@
     <Content Include="Content\Localisation\pseudo.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\SDL2_gfx-v1.0.6-x64.dll">
+    <Content Include="Libraries\SDL2_gfx-v1.0.6-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libFLAC-8.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\libfreetype-6.dll">
+    <Content Include="Libraries\libfreetype-6.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\libjpeg-9.dll">
+    <Content Include="Libraries\libjpeg-9.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libmodplug-1.dll">
@@ -90,7 +90,7 @@
     <Content Include="libpng16-16.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\libtiff-5.dll">
+    <Content Include="Libraries\libtiff-5.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libvorbis-0.dll">
@@ -99,25 +99,22 @@
     <Content Include="libvorbisfile-3.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\libwebp-7.dll">
+    <Content Include="Libraries\libwebp-7.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\SDL2-v2.0.22-x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  <Link>Content\Libraries\SDL2.dll</Link>
-    </Content>
-    <Content Include="Content\Libraries\SDL2-v2.0.22-x64.dll">
+    <Content Include="Libraries\SDL2_image-v2.0.5-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\SDL2_image-v2.0.5-x64.dll">
+    <Content Include="Libraries\SDL2_mixer-v2.0.4-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\SDL2_mixer-v2.0.4-x64.dll">
+    <Content Include="Libraries\SDL2_ttf-v2.0.18-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Libraries\SDL2_ttf-v2.0.18-x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+	<Content Include="Libraries\SDL2-v2.0.22-x64.dll">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  <Link>Libraries\SDL2.dll</Link>
+	</Content>
     <Content Include="zlib1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
