configurable PositionX and PositionY, store screen resolution, default to center of screen

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -1,13 +1,14 @@
 ; Engine Global Settings INI
 
 [Engine]
-MaxFPS = 10 ; -1 = off
+MaxFPS = -1 ; 0 or lower = off
 ShowFPS = true
 PerformanceProfiler = false
 
 [Graphics]
 ResolutionX = 960
 ResolutionY = 640
+
 WindowFlags = "SDL_WINDOW_SHOWN"
 
 [Localisation]
