fix scene initialisation and add WindowTitle GlobalSetting

--- a/Examples/BasicScene/Content/Engine.ini
+++ b/Examples/BasicScene/Content/Engine.ini
@@ -4,7 +4,6 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = false ; TEMP 20
 
 [Graphics]
 ResolutionX = 960
@@ -15,5 +14,6 @@ WindowFlags = "SDL_WINDOW_SHOWN"
 [Localisation]
 Language = "en-GB-test"
 
+; these are REQUIRED scene settings
 [Scene]
 StartupScene = "MainScene"
