--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -4,7 +4,7 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = false ; TEMP 20
+DontUseSceneManager = true ; TEMP 20
 
 [Graphics]
 ResolutionX = 960
@@ -15,5 +15,5 @@ WindowFlags = "SDL_WINDOW_SHOWN"
 [Localisation]
 Language = "en-GB-test"
 
-[Scene]
-StartupScene = "MainScene"
+;[Scene]
+;StartupScene = "MainScene"
