fix unfilled rounded rectangle rendering

--- a/Examples/shared/Content/Engine.ini
+++ b/Examples/shared/Content/Engine.ini
@@ -4,7 +4,7 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = true ; TEMP 20
+DontUseSceneManager = true ; used for basic examples
 
 [Graphics]
 ResolutionX = 960
