--- a/Examples/Packaging/Packaging.csproj
+++ b/Examples/Packaging/Packaging.csproj
@@ -46,8 +46,8 @@
 		<None Remove="../shared/Content/Libraries/SDL2_image-v2.0.5-x64.dll" />
 		<None Remove="../shared/Content/Libraries/SDL2_ttf-v2.0.18-x64.dll" />
 		<None Remove="../shared/Content/Libraries/SDL2_mixer-v2.0.4-x64.dll" />
-		<None Remove="Content\CollidingTexture1.png" />
-		<None Remove="Content\CollidingTexture2.png" />
+		<None Remove="Content\Engine.ini" />
+		<None Remove="game.wad" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -90,9 +90,6 @@
 		<Content Include="../shared/zlib1.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Link>zlib1.dll</Link>
-		</Content>
-		<Content Include="Content/Engine.ini">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="../shared/Content/Localisation/en-GB-test.ini">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -138,11 +135,20 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Link>Libraries/SDL2_mixer-v2.0.4-x64.dll</Link>
 		</Content>
-		<Content Include="Content\CollidingTexture1.png">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		<Content Include="Content\Engine.ini">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="Content\CollidingTexture2.png">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		<Content Include="game.wad">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Content\CollidingTexture1.png">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\CollidingTexture2.png">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
