set default content folder & block engine.ini from being in wad files

--- a/Examples/Packaging/Content/Engine.ini
+++ b/Examples/Packaging/Content/Engine.ini
@@ -7,6 +7,7 @@ PerformanceProfiler = false
 DontUseSceneManager = true ; used for basic examples
 DeleteUnpackedFilesOnExit = true
 PackageFile = "game.wad"
+ContentFolder = "Content"
 
 [Graphics]
 ResolutionX = 960
