--- a/Examples/Packaging/Content/Engine.ini
+++ b/Examples/Packaging/Content/Engine.ini
@@ -6,7 +6,7 @@ ShowDebugInfo = true
 PerformanceProfiler = false
 DontUseSceneManager = true ; used for basic examples
 DeleteUnpackedFilesOnExit = true
-PackageFile = "game.wad"
+PackageFile = "game.wad" ; engine.ini is excluded from makepackage
 ContentFolder = "Content"
 
 [Graphics]
