export basic.csproj to vstemplate

--- a/VSTemplate/Content/Engine.ini
+++ b/VSTemplate/Content/Engine.ini
@@ -4,7 +4,7 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = true ; used for basic examples
+DontUseSceneManager = false ; used for $safeprojectname$ examples
 
 [Graphics]
 ResolutionX = 960
@@ -14,3 +14,6 @@ WindowFlags = "SDL_WINDOW_SHOWN"
 
 [Localisation]
 Language = "en-GB-test"
+
+[Scene]
+StartupScene = "MainScene";
