turn off perf profiler by default for release

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -3,7 +3,7 @@
 [General]
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
-PerformanceProfiler = true
+ProfilePerformance = false ; turn to true to enable the Performance Profiler (see API Reference Chapter 19.2)
 DontUseSceneManager = true ; TEMP 20
 
 [Graphics]
