add new folders for text2 and splash

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -151,6 +151,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Text2\" />
+    <Folder Include="Splash\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
