TextBox::AllowMultiline. cut splash screen, engine starts tooo fast

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -5,6 +5,7 @@ MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
 DontUseSceneManager = true ; TEMP 20
+SplashScreenEnabled = true
 
 [Graphics]
 ResolutionX = 960
