packager now actually checks engine version in WAD header

--- a/NuCore.SDL2-CS/NuCore.SDL2.csproj
+++ b/NuCore.SDL2-CS/NuCore.SDL2.csproj
@@ -33,4 +33,8 @@
 	<PlatformTarget>ARM64</PlatformTarget>
 	<DefineConstants>TRACE;WINDOWS,ARM64</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
 </Project>
