--- a/LightningPackager/LightningPackager.csproj
+++ b/LightningPackager/LightningPackager.csproj
@@ -3,18 +3,20 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Nullable>disable</Nullable>
-	  <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
+	<TransformOnBuild>true</TransformOnBuild>
+	<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
+	<OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
+	<Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
+	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
+	
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 	  <PlatformTarget>x64</PlatformTarget>
 	  <DefineConstants>DEBUG;TRACE;WINDOWS,X64</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
-	  <PlatformTarget>ARM64</PlatformTarget>
-	  <DefineConstants>DEBUG;TRACE;WINDOWS,ARM64</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -22,13 +24,27 @@
 	  <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
-	  <PlatformTarget>ARM64</PlatformTarget>
-	  <DefineConstants>TRACE;WINDOWS,ARM64</DefineConstants>
-  </PropertyGroup>
+	<ItemGroup>
+		<None Include="AssemblyInfo.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>AssemblyInfo.tt</DependentUpon>
+		</None>
+	</ItemGroup>
 	
   <ItemGroup>
     <ProjectReference Include="..\NuCore.Utilities\NuCore.Utilities.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <None Update="AssemblyInfo.tt">
+      <LastGenOutput>AssemblyInfo.cs</LastGenOutput>
+      <Generator>TextTemplatingFileGenerator</Generator>
+    </None>
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
