--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -29,6 +29,7 @@
 	</PropertyGroup>
 	
   <ItemGroup>
+    <None Remove="Content\Animations\TestAnimation.json" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF0.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF1.png" />
     <None Remove="Content\AnimTextureTest\AnimTextureTestF2.png" />
@@ -42,6 +43,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Content\Animations\TestAnimation.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\AnimTextureTest\AnimTextureTestF0.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
