massive refactoring to support z-index

--- a/AnimTool/AnimTool.csproj
+++ b/AnimTool/AnimTool.csproj
@@ -6,10 +6,15 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Core\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lightning2\LightningGL.csproj" />
   </ItemGroup>
 
 </Project>
