--- a/MakePackage/MakePackage.csproj
+++ b/MakePackage/MakePackage.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -31,7 +31,7 @@
 	
 	<ItemGroup>
     <ProjectReference Include="..\LightningPackager\LightningPackager.csproj" />
-    <ProjectReference Include="..\NuCore.SDL2-CS\NuCore.SDL2.csproj" />
+    <ProjectReference Include="..\LightningBase-CS\LightningBase.csproj" />
   </ItemGroup>
 
 </Project>
