--- a/NuCore.SDL2-CS/LightningBase.csproj
+++ b/NuCore.SDL2-CS/LightningBase.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>NuCore.SDL2</RootNamespace>
+    <RootNamespace>LightningBase</RootNamespace>
     <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
     <AssemblyVersion>3.1.0.0</AssemblyVersion>
     <FileVersion>3.1.0.0</FileVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageId>NuCore.SDL2-CS</PackageId>
-    <Description>NuCore SDL2 Bindings</Description>
+    <Description>Lightning Native Bindings</Description>
     <Authors>Ethan, starfrost</Authors>
     <Version>3.1.0</Version>
     <SignAssembly>False</SignAssembly>
