--- a/NuCore.Utilities/NuCore.Utilities.csproj
+++ b/NuCore.Utilities/NuCore.Utilities.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NuCore.SDL2-CS\NuCore.SDL2.csproj" />
+    <ProjectReference Include="..\LightningBase-CS\LightningBase.csproj" />
   </ItemGroup>
 
 </Project>
